# uart_app

./: README.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  local.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib-can2.cpp  native-lib.cpp
android/app/src/main/kotlin/com/example/uart_app/: MainActivity.kt  SerialPort.kt  UARTHandler.kt  UartManager.kt  UartManagerCAN1.kt  UartManagerCAN2.kt
android/app/src/main/res/layout/: activity_main.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/DTO/: can_1_dto.dart
lib/services/: uart_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
